syntax = "proto3";

package overlock.overlock;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "overlock/overlock/composition_spec.proto";
import "overlock/overlock/configuration.proto";
import "overlock/overlock/configuration_spec.proto";
import "overlock/overlock/metadata.proto";
import "overlock/overlock/params.proto";
import "overlock/overlock/xrd_spec.proto";

option go_package = "overlock/x/overlock/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc CreateComposition(MsgCreateComposition) returns (MsgCreateCompositionResponse);
  rpc UpdateComposition(MsgUpdateComposition) returns (MsgUpdateCompositionResponse);
  rpc DeleteComposition(MsgDeleteComposition) returns (MsgDeleteCompositionResponse);
  rpc CreateXrd(MsgCreateXrd) returns (MsgCreateXrdResponse);
  rpc UpdateXrd(MsgUpdateXrd) returns (MsgUpdateXrdResponse);
  rpc DeleteXrd(MsgDeleteXrd) returns (MsgDeleteXrdResponse);
  rpc CreateConfiguration(MsgCreateConfiguration) returns (MsgCreateConfigurationResponse);
  rpc UpdateConfiguration(MsgUpdateConfiguration) returns (MsgUpdateConfigurationResponse);
  rpc DeleteConfiguration(MsgDeleteConfiguration) returns (MsgDeleteConfigurationResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "overlock/x/overlock/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.

  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreateComposition {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string apiVersion = 2;
  string kind = 3;
  Metadata metadata = 4;
  CompositionSpec spec = 5;
}

message MsgCreateCompositionResponse {
  uint64 id = 1;
}

message MsgUpdateComposition {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id = 2;
  string apiVersion = 3;
  string kind = 4;
  Metadata metadata = 5;
  CompositionSpec spec = 6;
}

message MsgUpdateCompositionResponse {}

message MsgDeleteComposition {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteCompositionResponse {}

message MsgCreateXrd {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string apiVersion = 2;
  string kind = 3;
  Metadata metadata = 4;
  XrdSpec spec = 5;
}

message MsgCreateXrdResponse {
  uint64 id = 1;
}

message MsgUpdateXrd {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id = 2;
  string apiVersion = 3;
  string kind = 4;
  Metadata metadata = 5;
  XrdSpec spec = 6;
}

message MsgUpdateXrdResponse {}

message MsgDeleteXrd {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteXrdResponse {}

message MsgCreateConfiguration {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string apiVersion = 2;
  string kind = 3;
  Metadata metadata = 4;
  ConfigurationSpec spec = 5;
}

message MsgCreateConfigurationResponse {
  uint64 id = 1;
}

message MsgUpdateConfiguration {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id = 2;
  string apiVersion = 3;
  string kind = 4;
  Metadata metadata = 5;
  ConfigurationSpec spec = 6;
}

message MsgUpdateConfigurationResponse {}

message MsgDeleteConfiguration {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteConfigurationResponse {}
